# Pupil-Diameter-Analysis

./: .gitignore  README.md  README_pupil_extraction_method.md  README_video_project.md  environment.yml  mouse_pupil_extraction_demo.ipynb  pyproject.toml  requirements.txt
docs/: INSTALL.md
pupil_finding/: __init__.py  cli.py  core.py  video.py
scripts/: setup_conda.sh  setup_venv.sh
